@@ -157,7 +157,12 @@ __gdtoa
 	int rdir, s2, s5, spec_case, try_quick;
 	Long L;
 	Bigint *b, *b1, *delta, *mlo, *mhi, *mhi1, *S;
-	double d, d2, ds, eps;
+	double d2, ds;
+#ifdef __HAVE_GCC44
+	union _dbl_union d, eps;
+#else
+	double d, eps;
+#endif
 	char *s, *s0;
 
 #ifndef MULTIPLE_THREADS
